# wasm-snip

./: .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.tpl.license  flake.nix
.github/: dependabot.yml
.github/workflows/: nix-flake-check.yml
src/: lib.rs
tests/: README.md  hello.rs  no_alloc.wasm  no_fmt.wasm  no_panicking.wasm  snip_me.wasm  tests.rs
